bugfix: weirdly wrapping text

--- a/static/styles/custom.sass
+++ b/static/styles/custom.sass
@@ -577,9 +577,6 @@ p
       margin-top: 20px
       width: 120px
 
-    @media screen and (min-width: 769px)
-      display: grid
-
     .excerpt_more
       color: #D04400
       font-weight: bold
